--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "dev:clean": "npx kill-port 3001 && nodemon server.js"
   },
   "dependencies": {
     "axios": "^1.6.1",
@@ -12,6 +13,6 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.10"
   }
 }
